(lang dune 1.11)

(name blocklib)
(maintainers "Martin Constantino–Bodin <martin.bodin@ens-lyon.org>")
(source (github Mbodin/blocklib))
(homepage "https://mbodin.github.io/blocklib/")

(license AGPL-3.0-or-later)

(package
  (name blocklib)
  (synopsis "A basic interface library")
  (description "This program combines storylets to create a custom scenario."))

(explicit_js_mode)

