(lang dune 2.0)

(name blocklib)
(generate_opam_files true)
(license AGPLv3)

(package
  (name blocklib)
  (synopsis "A basic interface library")
	(license AGPL-3.0-or-later)
	(maintainers "Martin Constantino–Bodin <martin.bodin@ens-lyon.org>")
	(source (github Mbodin/blocklib))
	(homepage "https://mbodin.github.io/blocklib/"))

(explicit_js_mode)

